cabal-version:      2.4
name:               arbitrary-summer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sara Fransson
maintainer:         sara.fransson@klarna.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Sums

    -- Modules included in this library but not exported.
    -- other-modules:

    build-depends:    
      , base ^>=4.14.2.0
      , text
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite arbitrary-summer-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.14.2.0
