cabal-version:      2.4
name:               arbitrary-summer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sara Fransson

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common enable-warnings
    ghc-options:
      -- For details on warnings: https://downloads.haskell.org/~ghc/master/users-guide/using-warnings.html
      -- This list taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
      -- Enable all warnings with -Weverything, then disable the ones we don’t care about
      -Weverything
      -- missing-exported-signatures turns off the more strict -Wmissing-signatures. See https://ghc.haskell.org/trac/ghc/ticket/14794#ticket
      -Wno-missing-exported-signatures
      -- Requires explicit imports of _every_ function (e.g. ‘$’); too strict
      -Wno-missing-import-lists
      -- When GHC can’t specialize a polymorphic function. No big deal and requires fixing underlying libraries to solve.
      -Wno-missed-specialisations
      -Wno-all-missed-specialisations
      -- Don’t use Safe Haskell warnings
      -Wno-unsafe
      -Wno-safe
      -- Warning for polymorphic local bindings; nothing wrong with those.
      -Wno-missing-local-signatures
      -- Don’t warn if the monomorphism restriction is used
      -Wno-monomorphism-restriction

library
    import: enable-warnings
    exposed-modules:  Data.Sums

    -- Modules included in this library but not exported.
    -- other-modules:

    build-depends:    
      , base ^>=4.14.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite arbitrary-summer-test
    import: enable-warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.14.2.0
